Added JVM configuration to increase memory for GWT compile.  Needed for mvn gwt:run to work